Moved the configuration of the log providers to a seperate file and seperated the log layout in a new class so it is independent of the log provider

--- a/Configuration/LogScraperConfig.json
+++ b/Configuration/LogScraperConfig.json
@@ -2,257 +2,5 @@
   "logProviderTypeDefault": "Kubernetes",
   "exportFileName": "R:\\Log scraper.log",
   "editorFileName": "C:\\Program Files\\Notepad++\\notepad++.exe",
-  "editorName": "Notepad++",
-  "fileConfig": {
-    "dateTimeFormat": "yyyy-MM-dd HH:mm:ss.fff",
-    "removeMetaDataCriteria":
-        {
-            "startPosition": 23,
-            "beforePhrase": " ",
-            "afterPhrase": " -"
-        },
-    "logMetadataProperties": [
-        {
-            "description": "Log level",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ",
-                "afterPhrase": " "
-            }
-        },
-        {
-            "description": "Project",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "projectName=\"",
-                "afterPhrase": "\""
-            }
-        }
-    ],
-    "logContentBeginEndFilters": [
-        {
-            "description": "Begin flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Starting flow: "
-            }
-        },
-        {
-            "description": "Einde flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Completed flow: "
-            }
-        },
-        {
-            "description": "Composed path",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Composed path "
-            }
-        },
-        {
-            "description": "Errors",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ERROR",
-                "endPhrase": " "
-            }
-        }
-    ]
-  },
-  "RuntimeConfig": {
-    "dateTimeFormat": "yyyy-MM-dd HH:mm:ss.fff",
-    "removeMetaDataCriteria":
-        {
-            "startPosition": 23,
-            "beforePhrase": " ",
-            "afterPhrase": " -"
-        },
-    "logMetadataProperties": [
-        {
-            "description": "Log level",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ",
-                "afterPhrase": " "
-            }
-        },
-        {
-            "description": "Project",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "projectName=\"",
-                "afterPhrase": "\""
-            }
-        },
-        {
-            "description": "Gebruiker",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "userId=\"",
-                "afterPhrase": "\""
-            }
-        },
-        {
-            "description": "Branch",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "projectVersion=\"",
-                "afterPhrase": "\""
-            }
-        }
-    ],
-    "logContentBeginEndFilters": [
-        {
-            "description": "Begin flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Starting flow: "
-            }
-        },
-        {
-            "description": "Einde flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Completed flow: "
-            }
-        },
-        {
-            "description": "Composed path",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Composed path "
-            }
-        },
-        {
-            "description": "Errors",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ERROR",
-                "endPhrase": " "
-            }
-        }
-    ],
-    "instances": [
-	    {
-		    "description" : "Example",
-		    "urlRuntimeLog":"http://localhost/log.txt"
-	    }
-    ]
-  },
-  "kubernetesConfig": {
-    "dateTimeFormat": "yyyy-MM-dd HH:mm:ss.fff",
-    "removeMetaDataCriteria":
-        {
-            "startPosition": 23,
-            "beforePhrase": " ",
-            "afterPhrase": " -"
-        },
-    "logMetadataProperties": [
-        {
-            "description": "Log level",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ",
-                "afterPhrase": " "
-            }
-        },
-        {
-            "description": "Project",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "projectName=\"",
-                "afterPhrase": "\""
-            }
-        },
-        {
-            "description": "Gebruiker",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "userId=\"",
-                "afterPhrase": "\""
-            }
-        },
-        {
-            "description": "Branch",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "projectVersion=\"",
-                "afterPhrase": "\""
-            }
-        },
-        {
-            "description": "Pagina",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "currentPageName=\"",
-                "afterPhrase": "\""
-            }
-        }
-    ],
-    "logContentBeginEndFilters": [
-        {
-            "description": "Begin flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Starting flow: "
-            }
-        },
-        {
-            "description": "Einde flow",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Completed flow: "
-            }
-        },
-        {
-            "description": "Composed path",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": "Composed path "
-            }
-        },
-        {
-            "description": "Errors",
-            "criteria": {
-                "startPosition": 23,
-                "beforePhrase": " ERROR",
-                "endPhrase": " "
-            }
-        }
-    ],
-    "clusters": [
-      {
-        "description": "Ontwikkel",
-        "baseUrl": "https://localhost/k8s",
-        "clusterId": "12345-o",
-        "namespaces": [
-          {
-            "description": "ABC",
-            "name": "ns-abc-o-001"
-          },
-          {
-            "description": "DEF",
-            "name": "ns-def-o-001"
-          }
-        ]
-      },
-      {
-        "description": "Test",
-        "baseUrl": "https://localhost/k8s",
-        "clusterId": "12345-t",
-        "namespaces": [
-          {
-            "description": "ABC",
-            "name": "ns-abc-t-001"
-          },
-          {
-            "description": "DEF",
-            "name": "ns-def-t-001"
-          }
-        ]
-      }
-    ]
-  }
+  "editorName": "Notepad++"
 }
