Changed the default logprovider to Runtime. Fixed typo in logscraper layout and ignored new Github documentation files

--- a/Configuration/LogScraperConfig.json
+++ b/Configuration/LogScraperConfig.json
@@ -1,5 +1,5 @@
 ﻿{
-  "logProviderTypeDefault": "Kubernetes",
+  "logProviderTypeDefault": "Runtime",
   "exportFileName": "R:\\Log scraper.log",
   "editorFileName": "C:\\Program Files\\Notepad++\\notepad++.exe",
   "editorName": "Notepad++"
