--- a/LogScraper.csproj
+++ b/LogScraper.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
@@ -35,6 +35,7 @@
   <ItemGroup>
     <None Remove=".gitignore" />
     <None Remove="CODE_OF_CONDUCT.md" />
+    <None Remove="CONTRIBUTING.md" />
     <None Remove="LICENSE" />
     <None Remove="PULL_REQUEST_TEMPLATE.md" />
     <None Remove="README.md" />
