Added http client timeout configuration and set default to 30 seconds

--- a/Configuration/LogScraperConfig.json
+++ b/Configuration/LogScraperConfig.json
@@ -2,5 +2,6 @@
   "logProviderTypeDefault": "Runtime",
   "exportFileName": "R:\\Log scraper.log",
   "editorFileName": "C:\\Program Files\\Notepad++\\notepad++.exe",
-  "editorName": "Notepad++"
+  "editorName": "Notepad++",
+  "httpCLientTimeOUtSeconds" : 30
 }
