--- a/LogScraper.csproj
+++ b/LogScraper.csproj
@@ -74,6 +74,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="ScintillaNET.Core" Version="3.6.51" />
   </ItemGroup>
